--- a/book.tex
+++ b/book.tex
@@ -2799,77 +2799,6 @@ can see that the value of {\tt n} gets smaller each time through the
 loop, so eventually we have to get to 0.  Other times a loop is obviously
 infinite because it has no iteration variable at all.
 
-In other cases, it is not so easy to tell.  The code below defines a function
-that takes an positive number as its parameter and computes a different 
-kind of sequence.
-Remember that the percent sign is the {\bf modulo} operator which gives us the
-remainder if a division were performed.
-
-\beforeverb
-\begin{verbatim}
-inp = raw_input('Enter a Number:')
-n = int(inp)
-while n != 1:
-    print n,            # Use comma to suppress newline
-    if n%2 == 0:        # n is even
-        n = n/2
-    else:               # n is odd
-        n = n*3+1
-\end{verbatim}
-\afterverb
-%
-The condition for this loop is {\tt n != 1}\footnote{Remember that {\tt != } is the operator for 'not equal'.}, 
-so the loop will continue
-until {\tt n} is {\tt 1}, which makes the condition false.
-
-Each time through the loop, the program outputs the value of {\tt n}
-and then checks whether it is even or odd.  If it is even, {\tt n} is 
-divided by 2.  If it is odd, the value of {\tt n} is replaced with
-{\tt n*3+1}. For example, if the argument passed
-to {\tt sequence} is 3, the resulting sequence is 3, 10, 5, 16, 8, 4, 2.
-
-Since {\tt n} sometimes increases and sometimes decreases, there is no
-obvious proof that {\tt n} will ever reach 1, or that the program
-terminates.  For some particular values of {\tt n}, we can prove
-termination.  For example, if the starting value is a power of two,
-then the value of {\tt n} will be even each time through the loop
-until it reaches 1. The previous example ends with such a sequence,
-starting with 16.
-
-\beforeverb
-\begin{verbatim}
-python sequence.py 
-Enter a Number:3
-3 10 5 16 8 4 2
-
-python sequence.py 
-Enter a Number:16
-16 8 4 2
-
-python sequence.py 
-Enter a Number:50
-50 25 76 38 19 58 29 88 44 22 11 34 17 52 26 13 40 20 10 5 16 8 4 2
-\end{verbatim}
-\afterverb
-%
-You can try this sequence with a variety of integer or floating 
-point numbers as as input.  To play with floating point
-numbers change the {\tt int()} call to {\tt float()} in the 
-{\tt sequence.py} code.
-
-Since the main loop repeatedly divides a number
-by two, an argument in the billions converges to one in 
-relatively few steps.  
-It is more fun to try floating point arguments 
-such as 12.45 as it takes more iterations before the sequence
-converges to one.
-
-\index{Collatz conjecture}
-The hard question is whether we can prove that this program terminates
-for \emph{all positive values} of {\tt n}.  So far\footnote{See
-  \url{wikipedia.org/wiki/Collatz_conjecture}.}, no one has
-been able to prove it \emph{or} disprove it!
-
 \section{``Infinite loops'' and {\tt break}}
 \index{break statement}
 \index{statement!break}
@@ -7609,7 +7538,7 @@ if there is more than one tuple with the same value, it will look
 at the second element (the key) so tuples where the value is the
 same will be further sorted by the alphabetical order of the key.
 
-At the end we write a nice {\t for loop} which does a multiple
+At the end we write a nice {\tt for loop} which does a multiple
 assignment iteration and prints out the ten most common words
 by iterating through a slice of the list ({\tt lst[:10]}).
 
