--- a/cfbook.tex
+++ b/cfbook.tex
@@ -2,8 +2,9 @@
 % Copyright (c) 2009-2011  Charles R. Severance, All Righs Reserved
 
 %\documentclass[10pt,b5paper]{book}
-\documentclass[10pt]{book}
-\usepackage[width=5.25in,height=7.50in,hmarginratio=3:2,vmarginratio=1:1]{geometry}
+\documentclass[11pt]{book}
+% \usepackage[width=5.25in,height=7.50in,hmarginratio=3:2,vmarginratio=1:1]{geometry}
+\usepackage[size=journal,gutter=0.75in,trim,bleed]{createspace}
 
 \usepackage{pslatex}
 \usepackage{url}
@@ -14,10 +15,11 @@
 \usepackage{makeidx}
 \usepackage{setspace}
 \usepackage{hevea}
+\usepackage{alltt}
 \usepackage{upquote}
 
 \newcommand{\thetitle}{Python for Informatics: Exploring Information}
-\newcommand{\theversion}{0.0.6}
+\newcommand{\theversion}{0.0.7}
 
 \makeindex
 
@@ -35,44 +37,6 @@
 
 \renewcommand{\blankpage}{\thispagestyle{empty} \quad \newpage}
 
-%\blankpage
-%\blankpage
-
-% TITLE PAGES FOR LATEX VERSION
-
-%-half title--------------------------------------------------
-\thispagestyle{empty}
-
-\centerline{\includegraphics[height=4.00in]{cover/network-um-nsf-9-99-10-09.eps}}
-
-%  cover/network-um-nsf-9-99-10-09.eps cover/network-um-nsf-9-99-10-09-nodes.eps
-
-% \begin{flushright}
-% \vspace*{2.0in}
-% \begin{spacing}{3}
-% {\huge Python for Informatics}\\
-% {\Large Exploring Information}\\
-% \end{spacing}
-
-% \vspace{0.25in}
-
-% Version \theversion
-
-% \vfill
-
-% \end{flushright}
-
-%--verso------------------------------------------------------
-
-\blankpage
-\blankpage
-%\clearemptydoublepage
-%\pagebreak
-%\thispagestyle{empty}
-%\vspace*{6in}
-
-%--title page--------------------------------------------------
-\pagebreak
 \thispagestyle{empty}
 
 \begin{flushright}
@@ -94,33 +58,30 @@ Version \theversion
 Charles Severance\\
 }
 
-
-\vspace{2.25in}
-
-\centerline{\includegraphics[width=1in]{figs2/by-sa.eps}}
 \vfill
 
 \end{flushright}
-
 
 %--copyright--------------------------------------------------
 \pagebreak
 \thispagestyle{empty}
 
 {\small
-Copyright \copyright ~2009-2011 Charles Severance.
+Copyright \copyright ~2009-2013 Charles Severance.
 
 
 Printing history:
 
 \begin{description}
 
-\item[December 2009:] Begin to 
-produce 
-\emph{Python for Informatics: Exploring Information}
-by re-mixing
+\item[September 2013:] Published book on Amazon CreateSpace
+
+\item[December 2009:] Major revision to chapters 2-10 from
 \emph{Think Python: How to Think Like
 a Computer Scientist}
+and writing chapters 1 and 11-15 to
+produce 
+\emph{Python for Informatics: Exploring Information}
 
 \item[June 2008:] Major revision, changed title to
 \emph{Think Python: How to Think Like
@@ -136,21 +97,14 @@ a Computer Scientist}.
 
 \vspace{0.2in}
 
-% \begin{flushleft}
-% Green Tea Press       \\
-% 9 Washburn Ave \\
-% Needham MA 02492
-% \end{flushleft}
-
 This work is licensed under a 
-Creative Commons Attribution-Share Alike 3.0 Unported License.  This license is 
+Creative Common
+Attribution-NonCommercial-ShareAlike 3.0 Unported License.
+This license is 
 available at
-\url{creativecommons.org/licenses/by-sa/3.0/}.
-
-The original form of this book is \LaTeX\ source code.  Compiling this
-\LaTeX\ source has the effect of generating a device-independent
-representation of a textbook, which can be converted to other formats
-and printed.
+\url{creativecommons.org/licenses/by-nc-sa/3.0/}.  You can 
+see what the author considers commercial and non-commercial
+uses of this material in the Appendinx on Copyright Detail.
 
 The \LaTeX\ source for the 
 \emph{Think Python: How to Think Like
@@ -158,13 +112,6 @@ a Computer Scientist}
 version of this book is available from
 \url{http://www.thinkpython.com}.
 
-The cover image shows social connectivity of NSF grant investigators 
-at the University of Michigan
-from September 1999 through October 2010 and was provided
-by Eric Hofer and visualized using 
-the GUESS software developed by Eytan Adar,
-both of the University of Michigan.  The cover design is
-by Terri Geitgey of the University of Michigan Library.
 \vspace{0.2in}
 
 } % end small
@@ -229,7 +176,7 @@ has been changed to get to doing data analysis problems as quickly as
 possible and have a series of running examples and exercises 
 about data analysis from the very beginning.  
 
-The first 10 chapters are similar to the \emph{Think Python} book
+The chapters 2-10 are similar to the \emph{Think Python} book
 but there have been some changes.  Nearly all number-oriented
 exercises have been replaced with data-oriented exercises.
 Topics are presented in the order to needed to build increasingly
@@ -240,7 +187,7 @@ they are needed to handle program complexity rather introduced
 as an early lesson in abstraction.  The word ``recursion'' does not 
 appear in the book at all.
 
-In chapters 11-15, nearly all of the material is brand new, focusing
+In chapters 1 and 11-15, all of the material is brand new, focusing
 on real-world uses and simple examples of Python for data analysis 
 including regular expressions for searching and parsing, 
 automating tasks on your computer, retrieving data across 
@@ -269,6 +216,7 @@ able to move quickly through \emph{Think Python} with a minimum of effort.
 \index{BY-SA}
 As the copyright holder of \emph{Think Python},
 Allen has given me permission to change the book's license 
+on the material from his book that remains in this book
 from the
 GNU Free Documentation License 
 to the more recent
@@ -291,7 +239,7 @@ results of my efforts and I hope that you the reader are pleased with
 Charles Severance\\
 www.dr-chuck.com\\
 Ann Arbor, MI, USA\\
-July 25, 2010
+September 7, 2013
 
 Charles Severance is a 
 Clinical Associate Professor 
@@ -1520,23 +1468,28 @@ for line in hand:
 %
 The search string ``\verb"^"From:.+@'' will successfully match lines that start with ``From:'' followed by one or more characters ``.+'' followed by an at-sign.  So this will match the following line:
 
-{\tt
+\beforeverb
+\begin{alltt}
 {\bf From:}\underline{ stephen.marquard}{\bf @}uct.ac.za
-}
+\end{alltt}
+\afterverb
 
 You can think of the ``.+'' wildcard as expanding to match all the characters between the 
 colon character and the at-sign.  
 
-
-{\tt
+\beforeverb
+\begin{alltt}
 {\bf From:}\underline{.+}{\bf @}
-}
+\end{alltt}
+\afterverb
 
 It is good to think of the plus and asterisk characters as ``pushy''.  For example the following string would match the last at-sign in the string as the ``.+'' pushes outwards as shown below:
 
-{\tt
+\beforeverb
+\begin{alltt}
 {\bf From:}\underline{ stephen.marquard@uct.ac.za, csev@umich.edu, and cwen}{\bf @}iupui.edu
-}
+\end{alltt}
+\afterverb
 
 It is possible to tell an asterisk or plus-sign not to be so ``greedy'' by adding 
 another character.   See the detailed documentation for information on turning off the 
@@ -1645,6 +1598,7 @@ for line in hand:
 \end{verbatim}
 \afterverb
 %
+
 \beforeverb
 \begin{verbatim}
 …
@@ -2457,6 +2411,7 @@ http://www.pythonlearn.com/
 %
 You can use BeautifulSoup to pull out various parts of each 
 tag as follows:
+
 \beforeverb
 \begin{verbatim}
 import urllib
@@ -2700,12 +2655,12 @@ are drawn as \emph{children} of their parent nodes.
 
 \section{Parsing XML}
 
-Here is a simple application that parses some XML
-and extracts some data elements from the XML:
-
 \index{ElementTree}
 \index{ElementTree!fromstring}
 \index{ElementTree!find}
+Here is a simple application that parses some XML
+and extracts some data elements from the XML:
+
 \beforeverb
 \begin{verbatim}
 import xml.etree.ElementTree as ET
@@ -2750,12 +2705,12 @@ worrying about the rules of XML syntax.
 
 \section{Looping through nodes}
 
+\index{ElementTree!findall}
+\index{ElementTree!get}
 Often the XML has multiple nodes and we need to write a loop
 to process all of the nodes.  In the following program, 
 we loop through all of the {\tt user} nodes:
 
-\index{ElementTree!findall}
-\index{ElementTree!get}
 \beforeverb
 \begin{verbatim}
 import xml.etree.ElementTree as ET
@@ -3166,30 +3121,26 @@ table, row, and column are more formally referred
 to as {\bf relation}, {\bf tuple}, and {\bf attribute}, respectively.
 We will use the less formal terms in this chapter.
 
-\section{SQLite Database Browser}
+\section{SQLite manager Firefox add-on}
 
 While this chapter will focus on using Python to work with data 
 in SQLite database files, many operations can be done more
-conveniently using a desktop program called the {\bf SQLite
-Database Browser} which is freely available from:
+conveniently using a Firefox add-on called the {\bf SQLite
+Database Manager} which is freely available from:
 
-\url{http://sourceforge.net/projects/sqlitebrowser/}
+\url{https://addons.mozilla.org/en-us/firefox/addon/sqlite-manager/}
 
 Using the browser you can easily create tables, insert data, edit data, 
 or run simple SQL queries on the data in the database.
 
-\beforefig
-\centerline{\includegraphics[height=3.00in]{figs2/sqlite.eps}}
-\afterfig
-
-In a sense, the database browser is similar to a text editor
+In a sense, the database manager is similar to a text editor
 when working with text files.   When you want to do one or
 very few operations on a text file, you can just open it
 in a text editor and make the changes you want.   When you have 
 many changes that you need to do to a text file, often you 
 will write a simple Python program.  You will find the same 
 pattern when working with databases.  You will do simple
-operations in the database browser and more complex operations
+operations in the database manager and more complex operations
 will be most conveniently done in Python.
 
 \section{Creating a database table}
@@ -3648,6 +3599,7 @@ retrieved the \verb"screen_name" and setting the friend count to zero.
 
 So the first time the program runs and we enter a Twitter account, the program
 runs as follows:
+
 \beforeverb
 \begin{verbatim}
 Enter a Twitter account, or quit: drchuck
@@ -3665,6 +3617,7 @@ empty.
 
 At this point, we might want to write a simple database dumper
 to take a look at what is in our {\tt twdata.db} file:
+
 \beforeverb
 \begin{verbatim}
 import sqlite3
@@ -3687,6 +3640,7 @@ loops through the rows and prints out each row.
 
 If we run this program after the first execution of our Twitter
 spider above, its output will be as follows:
+
 \beforeverb
 \begin{verbatim}
 (u'opencontent', 0, 1)
@@ -3708,6 +3662,7 @@ our first Twitter account ({\bf drchuck}).  We can run the program
 again and tell it to retrieve the friends of the next 
 ``unprocessed'' account by simply pressing enter instead of
 a Twitter account as follows:
+
 \beforeverb
 \begin{verbatim}
 Enter a Twitter account, or quit: 
@@ -3722,6 +3677,7 @@ Enter a Twitter account, or quit: quit
 %
 Since we pressed enter (i.e. we did not specify a Twitter account),
 the following code is executed:
+
 \beforeverb
 \begin{verbatim}
     if ( len(acct) < 1 ) :
@@ -4154,6 +4110,7 @@ a relationship by creating the table with a uniqueness constraint and then
 adding {\tt OR IGNORE} to our {\tt INSERT} statement.
 
 Here is a sample execution of this program:
+
 \beforeverb
 \begin{verbatim}
 Enter a Twitter account, or quit: 
@@ -4177,6 +4134,7 @@ our database.
 
 The following is the first few rows in the {\tt People} 
 and {\tt Follows} tables after this run is completed:
+
 \beforeverb
 \begin{verbatim}
 People:
@@ -4473,17 +4431,6 @@ of attributes.  More typically called ``row''.
 
 \end{description}
 
-\section{Exercises}
-
-\begin{ex}
-Retrieve the following file \url{http://www.py4inf.com/code/wikidata.db} 
-and use the SQLite browser to figure out how many tables
-are in the database and list the fields for each of the tables including the
-type of the field.  One of the fields is a type that is not described in 
-this chapter.  Use the SQLite online documentation to describe the
-purpose of that type of data?
-\end{ex}
-
 \chapter{Automating common tasks on your computer}
 
 We have been reading data from files, networks, services,
@@ -4753,6 +4700,7 @@ We will not bother showing ourselves those files that are exactly
 information.
 
 So we write the following program:
+
 \beforeverb
 \begin{verbatim}
 import os
@@ -4814,7 +4762,7 @@ to the program to deal with these files as well.
            lines = list()
            for line in fhand:
                lines.append(line)
-           if len(lines) == 3 and lines[2].startswith('Sent from my iPhone') :
+           if len(lines) == 3 and lines[2].startswith('Sent from my iPhone'):
                continue
            if len(lines) > 1:
                 print len(lines), thefile
@@ -4827,6 +4775,7 @@ line starts with the specified text, we skip it.
 
 Now when we run the program, we only see four remaining 
 multi-line files and all of those files look pretty reasonable:
+
 \beforeverb
 \begin{verbatim}
 python txtcheck2.py 
@@ -4851,6 +4800,7 @@ Now we are getting ready to delete the files, so
 we are going to flip the logic and instead of printing out 
 the remaining good files, we will print out the ``bad''
 files that we are about to delete.
+
 \beforeverb
 \begin{verbatim}
 import os
@@ -4868,7 +4818,7 @@ for (dirname, dirs, files) in os.walk('.'):
            for line in fhand:
                lines.append(line)
            fhand.close()
-           if len(lines) == 3 and lines[2].startswith('Sent from my iPhone') :
+           if len(lines) == 3 and lines[2].startswith('Sent from my iPhone'):
                print 'iPhone:', thefile
                continue
 \end{verbatim}
@@ -4877,6 +4827,7 @@ for (dirname, dirs, files) in os.walk('.'):
 We can now see a list of candidate files that we are about
 to delete and why these files are up for deleting.
 The program produces the following output:
+
 \beforeverb
 \begin{verbatim}
 python txtcheck3.py
@@ -4896,6 +4847,7 @@ caught some files we did not want to catch.
 
 Once we are satisfied that this is the list of files we want to delete,
 we make the following change to the program:
+
 \beforeverb
 \begin{verbatim}
            if size == 2578 or size == 2565:
@@ -4903,7 +4855,7 @@ we make the following change to the program:
                os.remove(thefile)
                continue
 ...
-           if len(lines) == 3 and lines[2].startswith('Sent from my iPhone') :
+           if len(lines) == 3 and lines[2].startswith('Sent from my iPhone'):
                print 'iPhone:', thefile
                os.remove(thefile)
                continue
@@ -5020,6 +4972,7 @@ the two command line arguments after the file name.
 
 We can rewrite our program to read the file, taking the file name 
 from the command line argument as follows:
+
 \beforeverb
 \begin{verbatim}
 import sys
@@ -5244,13 +5197,12 @@ and it is already in the dictionary as a key, you have two files with
 duplicate content so print out the file in the dictionary
 and the file you just read.  Here is some sample output
 from a run in a folder of image files:
+
 \beforeverb
 \begin{verbatim}
 ./2004/11/15-11-04_0923001.jpg ./2004/11/15-11-04_1016001.jpg
 ./2005/06/28-06-05_1500001.jpg ./2005/06/28-06-05_1502001.jpg
 ./2006/08/11-08-06_205948_01.jpg ./2006/08/12-08-06_155318_02.jpg
-./2006/09/28-09-06_225657_01.jpg ./2006/09-50-years/28-09-06_225657_01.jpg
-./2006/09/29-09-06_002312_01.jpg ./2006/09-50-years/29-09-06_002312_01.jpg
 \end{verbatim}
 \afterverb
 %
@@ -5636,6 +5588,63 @@ Nam Nguyen,
 St\'{e}phane Morin,
 and
 Paul Stoop.
+
+\chapter{Copyright Detail}
+
+This work is licensed under a 
+Creative Common
+Attribution-NonCommercial-ShareAlike 3.0 Unported License.
+This license is 
+available at
+\url{creativecommons.org/licenses/by-nc-sa/3.0/}.  
+
+I would have preferred to license the book under the less 
+restrictive CC-BY-SA license.   But unfortunately there are
+a few unscrupulous
+organizations search for and find freely licensed books,
+publish and sell virtually unchanged copies of the books on a 
+print on demand service such as LuLu or CreateSpace.  CreateSpace
+has (thankfully) added a policy that gives the wishes of actual 
+copyright holder preference over a non-copyright holder attempting 
+to publish a freely licensed work.  Unfortunately there are many 
+print-on-demand services and very few have as well-considered a policy 
+as CreateSpace.
+
+So I regretfully added the NC element to the license
+this book to give me recourse in case someone tries to clone this 
+book and sell it commercially.   Unfortunately, adding NC limits uses
+of this material that I would like to permit.  So I have added this 
+section of the document to describe specific situations where 
+I am giving my permission in advance to use the material in this book
+in situations that some might consider commercial.
+
+\begin{itemize}
+\item If you are printing a limited number of copies of this book for use 
+in a course, then you are granted CC-BY license to these materials 
+for that purpose.
+
+\item If you are creating a derived work that includes less than 5 percent 
+of this content then you are granted a CC0 license to these materials 
+for that purpose.
+
+\item If you translate this book into a language other than English, then 
+you are granted a CC-BY-SA license to these materials with respect to 
+the publication of your translation. In particular you are permitted 
+to sell the resulting translated book commercially.
+\end{itemize}
+
+Of course, you are welcome to contact me and ask for permission if these
+clauses are not sufficient.  In all cases, permission to reuse and
+remix this material will be granted as long as there is clear added value
+or benefit to students and teachers that will accrue as a result of the 
+new work.
+
+Charles Severance\\
+www.dr-chuck.com\\
+Ann Arbor, MI, USA\\
+September 7, 2013
+
+
 
 \normalsize
 
