Tweaks on copyright text.
git-svn-id: https://source.sakaiproject.org/contrib/csev/trunk/pyinf/tex@84602 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -5601,16 +5601,16 @@ available at
 I would have preferred to license the book under the less 
 restrictive CC-BY-SA license.   But unfortunately there are
 a few unscrupulous
-organizations search for and find freely licensed books,
-publish and sell virtually unchanged copies of the books on a 
+organizations who search for and find freely licensed books,
+and then publish and sell virtually unchanged copies of the books on a 
 print on demand service such as LuLu or CreateSpace.  CreateSpace
-has (thankfully) added a policy that gives the wishes of actual 
+has (thankfully) added a policy that gives the wishes of the actual 
 copyright holder preference over a non-copyright holder attempting 
 to publish a freely licensed work.  Unfortunately there are many 
 print-on-demand services and very few have as well-considered a policy 
 as CreateSpace.
 
-So I regretfully added the NC element to the license
+Regretfully, I added the NC element to the license
 this book to give me recourse in case someone tries to clone this 
 book and sell it commercially.   Unfortunately, adding NC limits uses
 of this material that I would like to permit.  So I have added this 
@@ -5623,10 +5623,6 @@ in situations that some might consider commercial.
 in a course, then you are granted CC-BY license to these materials 
 for that purpose.
 
-\item If you are creating a derived work that includes less than 5 percent 
-of this content then you are granted a CC0 license to these materials 
-for that purpose.
-
 \item If you translate this book into a language other than English, then 
 you are granted a CC-BY-SA license to these materials with respect to 
 the publication of your translation. In particular you are permitted 
@@ -5636,7 +5632,7 @@ to sell the resulting translated book commercially.
 Of course, you are welcome to contact me and ask for permission if these
 clauses are not sufficient.  In all cases, permission to reuse and
 remix this material will be granted as long as there is clear added value
-or benefit to students and teachers that will accrue as a result of the 
+or benefit to students or teachers that will accrue as a result of the 
 new work.
 
 Charles Severance\\
