--- a/cfbook.tex
+++ b/cfbook.tex
@@ -76,6 +76,9 @@ Printing history:
 
 \item[September 2013:] Published book on Amazon CreateSpace
 
+\item[January 2010:] Published book using the University of 
+Michigan Espresso Book machine.
+
 \item[December 2009:] Major revision to chapters 2-10 from
 \emph{Think Python: How to Think Like
 a Computer Scientist}
@@ -104,7 +107,8 @@ This license is
 available at
 \url{creativecommons.org/licenses/by-nc-sa/3.0/}.  You can 
 see what the author considers commercial and non-commercial
-uses of this material in the Appendinx on Copyright Detail.
+uses of this material as well as license exemptions 
+in the Appendix titled Copyright Detail.
 
 The \LaTeX\ source for the 
 \emph{Think Python: How to Think Like
@@ -236,10 +240,14 @@ under an open Copyright.   I hope they are pleased with the
 results of my efforts and I hope that you the reader are pleased with
 \emph{our} collective efforts.
 
+I would like to thank Allen B. Downey and Lauren Cowles for their help,
+patience, and guidance in dealing with and resolving the copyright 
+issues around this book.
+
 Charles Severance\\
 www.dr-chuck.com\\
 Ann Arbor, MI, USA\\
-September 7, 2013
+September 9, 2013
 
 Charles Severance is a 
 Clinical Associate Professor 
@@ -5237,10 +5245,10 @@ can be downloaded and installed from:
 Then download a recent version of Python 2 from the
 \url{www.python.org} web site.
 
-\url{http://www.python.org/download/releases/2.5.4/}
+\url{http://www.python.org/download/releases/2.7.5/}
 
 Once you have installed Python, you should have a new
-folder on your computer like {\tt C:{\textbackslash}Python25}.
+folder on your computer like {\tt C:{\textbackslash}Python27}.
 
 To create a Python program, run NotePad++ from the Start Menu
 and save the file with a suffix of ``.py''.  For this
@@ -5619,9 +5627,9 @@ I am giving my permission in advance to use the material in this book
 in situations that some might consider commercial.
 
 \begin{itemize}
-\item If you are printing a limited number of copies of this book for use 
-in a course, then you are granted CC-BY license to these materials 
-for that purpose.
+\item If you are printing a limited number of copies of all or part of 
+this book for use in a course (e.g. like a coursepack), then 
+you are granted CC-BY license to these materials for that purpose.
 
 \item If you translate this book into a language other than English, then 
 you are granted a CC-BY-SA license to these materials with respect to 
@@ -5638,7 +5646,7 @@ new work.
 Charles Severance\\
 www.dr-chuck.com\\
 Ann Arbor, MI, USA\\
-September 7, 2013
+September 9, 2013
 
 
 
