--- a/cfbook.tex
+++ b/cfbook.tex
@@ -915,7 +915,7 @@ in a file with a name like:
 
 \beforeverb
 \begin{verbatim}
-C:\Python26\python.exe
+C:\Python27\python.exe
 \end{verbatim}
 \afterverb
 %
@@ -2816,19 +2816,10 @@ we call these {\bf web services}.
 
 \section{Twitter web services}
 
-You are probably familiar with the Twitter web site and its
-applications \url{http://www.twitter.com}.  Twitter has a very unique
-approach to its API/web services in that all of its data is available
-to non-Twitter applications using the Twitter API.
-
-Because Twitter has been so liberal in allowing access to its data,
-it has enabled thousands of software developers to build their own
-customized Twitter-based software.  These additional applications greatly
-increase the value of Twitter far beyond simply a web site.  The 
-Twitter web services allow the building of whole new applications that
-the Twitter team may never have thought of.  It is said that over 90 percent
-of the use of Twitter is through the API (i.e. not through the {\tt twitter.com}
-web user interface).
+{\bf Note:} Since this section was written, Twitter has 
+dramatically changed the format and rules for the use of its API.
+So the code that uses the Twitter API will no longer work.  It 
+still shows how one would work with an XML-based API in general.
 
 You can view the Twitter API documentation at 
 \url{http://apiwiki.twitter.com/}.  The Twitter API is an example
