--- a/cfbook.tex
+++ b/cfbook.tex
@@ -5625,8 +5625,12 @@ you are granted CC-BY license to these materials for that purpose.
 \item If you translate this book into a language other than English, then 
 you are granted a CC-BY-SA license to these materials with respect to 
 the publication of your translation. In particular you are permitted 
-to sell the resulting translated book commercially.
+to sell the resulting translated book commercially.  
 \end{itemize}
+
+If you are intending to translate the book, you may want to contact me
+so we can make sure that you have all of the related course materials so 
+you can translate them as well.
 
 Of course, you are welcome to contact me and ask for permission if these
 clauses are not sufficient.  In all cases, permission to reuse and
